--- a/sass/components/_contacts.scss
+++ b/sass/components/_contacts.scss
@@ -1,32 +1,31 @@
 .contacts {
-  // display: flex;
   @media screen and (max-width: 767px) {
     display: none;
   }
 
   @media screen and (min-width: 768px) {
+    display: block;
     margin-left: auto;
     padding: 21px 0;
   }
 }
 
 .contacts__item {
+  @include centered-flex($justify: flex-start);
+
+  &:not(:last-child) {
+    margin-bottom: 10px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
   // @include centered-flex();
 
   // &:not(:last-child) {
   //   margin-right: 50px;
-
-  display: block;
-  @media screen and (min-width: 768px) {
-    &:not(:last-child) {
-      margin-bottom: 10px;
-    }
-  }
 }
 
 .contacts__link {
-  // padding-top: 32px;
-  // padding-bottom: 32px;
   @extend %link;
   display: block;
 
@@ -37,18 +36,22 @@
   &:hover,
   &:focus {
     color: $accent-color;
+  }
 
-    @media screen and (min-width: 1200px) {
-      // @include centered-flex();
-    }
+  @media screen and (min-width: 768px) {
+    @include font($semibold, 12px, 1.17, 0.02em);
+  }
+
+  @media screen and (min-width: 1200px) {
+    // @include centered-flex();
   }
 }
 
 .contacts__icon {
-  margin-right: 10px;
+  margin-right: 8px;
   fill: currentColor;
 
-  @media screen and (max-width: 479px) {
-    display: none;
+  @media screen and (min-width: 1200px) {
+    margin-right: 10px;
   }
 }
