--- a/sass/layout/_menu.scss
+++ b/sass/layout/_menu.scss
@@ -26,29 +26,27 @@
 }
 
 .mobile-menu {
-  @media screen and (max-width: 767px) {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    z-index: 999;
-    transform: translateX(-100%);
-    transition: transform $timing $function;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  z-index: 999;
+  transform: translateX(-100%);
+  transition: transform $timing $function;
 
-    display: flex;
-    flex-direction: column;
-    padding: 48px 40px;
-    background-color: $primary-bg-white-color;
-
-    &.is-open {
-      transform: translateX(0);
-    }
-  }
+  display: flex;
+  flex-direction: column;
+  padding: 48px 40px;
+  background-color: $primary-bg-white-color;
 
   @media screen and (min-width: 768px) {
     display: none;
   }
+}
+
+.mobile-menu.is-open {
+  transform: translateX(0);
 }
 
 .mobile-menu__list {
