--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -2,8 +2,8 @@
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   padding: 93px 15px;
   overflow-y: scroll;
   background-color: rgba(0, 0, 0, 0.2);
@@ -24,6 +24,7 @@
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   background-color: $primary-bg-white-color;
+  transition: box-shadow $timing $function;
 
   @media screen and (min-width: 768px) {
     position: absolute;
@@ -32,7 +33,7 @@
     max-width: 450px;
     width: 100%;
     transform: translate(-50%, -50%) scale(1);
-    transition: transform $timing $function, box-shadow $timing $function;
+    transition: transform $timing $function;
   }
 
   @media screen and (min-width: 1200px) {
@@ -42,7 +43,10 @@
 }
 
 .backdrop.is-hidden .modal {
-  transform: translate(-50%, -50%) scale(0.9);
+  transform: scale(0.9);
+  @media screen and (min-width: 768px) {
+    transform: translate(-50%, -50%);
+  }
 }
 
 .modal__btn {
