--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -1,4 +1,4 @@
-.card-set {
+.project {
   display: flex;
   flex-wrap: wrap;
 
@@ -8,7 +8,7 @@
   }
 }
 
-.card-set__item {
+.project__item {
   width: 100%;
   margin-bottom: $card-gap;
 
@@ -51,16 +51,28 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
   padding: 63px 24px;
-  font-size: 18px;
-  line-height: 1.56;
+  @include font(null, 18px, 1.56);
 
   transform: translateY(101%);
   transition: transform $timing $function;
   color: $primary-bg-white-color;
   background-color: rgba(33, 150, 243, 0.9);
-  overflow: auto;
+
+  @media screen and (max-width: 479px) {
+    font-size: 3.75vw;
+    padding-top: 50px;
+  }
+
+  @media screen and (min-width: 480px) and (max-width: 767px) {
+    padding-top: 77px;
+    padding-bottom: 77px;
+  }
+
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    padding-top: 49px;
+    padding-bottom: 49px;
+  }
 }
 
 .project__meta {
