--- a/css/main.css
+++ b/css/main.css
@@ -1627,7 +1627,7 @@ img {
 }
 
 @media screen and (max-width: 767px) {
-  .filter__item:not(:last-child) {
+  .filter__item:nth-child(-n + 3) {
     margin-bottom: 15px;
   }
 }
