--- a/sass/layout/_filter.scss
+++ b/sass/layout/_filter.scss
@@ -16,6 +16,9 @@
 .filter__item {
   &:not(:last-child) {
     margin-right: 8px;
+  }
+
+  &:nth-child(-n + 3) {
     @media screen and (max-width: 767px) {
       margin-bottom: 15px;
     }
